--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,3 +20,14 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
